--- a/ElectronsFlaskTest/index.html
+++ b/ElectronsFlaskTest/index.html
@@ -5,9 +5,11 @@
       <title>Hello World!</title>
     </head>
     <body>
-      <h1 id="title">Hello World!</h1>
-
-    <!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
+      <h1 id="title"></h1>
+      <h6> From firebase: </h6>
+      <ul id="fromfirebase">
+      </ul>
+      <!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
       <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
       <!-- normal script imports etc  -->
