Add validations when logging in and registering an account

--- a/ElectronsFlaskTest/html/index.html
+++ b/ElectronsFlaskTest/html/index.html
@@ -16,6 +16,8 @@
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <ul id="errorMessage" class="mt-2 text-left">
+      </ul>
       <button class="btn btn-lg btn-primary btn-block" type="submit" id="login_user">Sign in</button>
       <p class="mt-2">Don't have an account? <a href="register.html">Register now!</a></p>
     </form>
