--- a/ElectronsFlaskTest/html/register.html
+++ b/ElectronsFlaskTest/html/register.html
@@ -20,7 +20,8 @@
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
       <label for="inputPasswordConfirmation" class="sr-only">Confirm your password</label>
       <input type="password" id="inputPasswordConfirmation" class="form-control" placeholder="Confirm your password" required>
-      <p id="errorMessage" class="mt-2"></p>
+      <ul id="errorMessage" class="mt-2 text-left">
+      </ul>
       <button class="btn btn-lg btn-primary btn-block" type="submit" id="register_user">Sign up</button>
       <p class="mt-2">Already have an account? <a href="index.html">Log in!</a></p>
     </form>
