--- a/ElectronsFlaskTest/html/projects.html
+++ b/ElectronsFlaskTest/html/projects.html
@@ -7,34 +7,42 @@
 		<meta name="author" content="">
 		<title>MEI</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
 	<body>
-
-
-		<div class="container">
-			<h1 id="welcome"></h1>
-			<h2>My projects</h2>
-			<div id="userProjects">
+		<div class="container" style="height: 90vh; font-family: 'Roboto', sans-serif;">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 id="welcome"></h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h2>My projects</h2>
+					<div id="userProjects" style="overflow-y: scroll; height: 70vh">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<h2>Create project</h2>
+					<form>
+						<label for="userProjects" class="sr-only">Name</label>
+						<input type="text" id="inputProjectName" class="form-control mt-3 shadow-sm" placeholder="Name" required>
+						<label for="userProjects" class="sr-only">Organization</label>
+						<input type="text" id="inputOrg" class="form-control mt-2 shadow-sm" placeholder="Organization" required>
+						<label for="userProjects" class="sr-only">Context</label>
+						<input type="text" id="inputContext" class="form-control mt-2 shadow-sm" placeholder="Context" required>
+						<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="create_project">Create</button>
+					</form>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12" style="vertical-align: middle">
+					<p class="text-muted text-center">&copy; 2018</p>	
+				</div>
 			</div>
 		</div>
-
-		<div class="container">
-			<form class="form-signin">
-				<h1 id="h3 mb-3 font-weight-normal">Create Project</h1>
-				<label for="userProjects" class="sr-only">Name</label>
-				<input type="text" id="inputProjectName" class="form-control" placeholder="Name" required>
-				<label for="userProjects" class="sr-only">Organization</label>
-				<input type="text" id="inputOrg" class="form-control" placeholder="Org" required>
-				<label for="userProjects" class="sr-only">Context</label>
-				<input type="text" id="inputContext" class="form-control" placeholder="Context" required>
-				<button class="btn btn-lg btn-primary btn-block" type="submit" id="create_project">Create</button>
-			</form>
-		</div>
-
-		<footer class="footer text-center">
-			<p class="text-muted">&copy; 2018</p>
-		</footer>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 		<script src="../js/jquery.js"></script>
