--- a/ElectronsFlaskTest/html/session.html
+++ b/ElectronsFlaskTest/html/session.html
@@ -7,27 +7,31 @@
 		<meta name="author" content="">
 		<title>MEI</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link href="../styles/login.css" rel="stylesheet">
 	</head>
 	<body>
 
+		<nav class="navbar navbar-dark bg-primary">
+  			<button id="back" type="button" class="btn btn-primary">Back</button>
+		</nav>
 
 		<div class="container">
-			<h1 id="welcome"></h1>
-			<h2>Project</h2>
-			<div id="projectSessions">
+			<div class="row">
+				<div class="col-lg-6 ml-auto">
+					<h1 id="welcome"></h1>
+					<h2>Sessions</h2>
+					<div  id="projectSessions"></div>
+				</div>
+				<div class="col-lg-6 mr-auto">
+					<form class="form-signin">
+						<h1 id="h3 mb-3 font-weight-normal">Create Session</h1>
+						<label for="projectSessions" class="sr-only">Name</label>
+						<input type="text" id="inputSessionName" class="form-control" placeholder="Name" required>
+						<label for="projectSessions" class="sr-only">Summary</label>
+						<input type="text" id="inputSummary" class="form-control" placeholder="Summary" required>
+						<button class="btn btn-lg btn-primary btn-block" type="submit" id="create_session">Create</button>
+					</form>
+				</div>
 			</div>
-		</div>
-
-		<div class="container">
-			<form class="form-signin">
-				<h1 id="h3 mb-3 font-weight-normal">Create Session</h1>
-				<label for="projectSessions" class="sr-only">Name</label>
-				<input type="text" id="inputSessionName" class="form-control" placeholder="Name" required>
-				<label for="projectSessions" class="sr-only">Summary</label>
-				<input type="text" id="inputSummary" class="form-control" placeholder="Summary" required>
-				<button class="btn btn-lg btn-primary btn-block" type="submit" id="create_session">Create</button>
-			</form>
 		</div>
 
 		<footer class="footer text-center">
