--- a/ElectronsFlaskTest/html/sessionInfo.html
+++ b/ElectronsFlaskTest/html/sessionInfo.html
@@ -20,7 +20,7 @@
 		<div class="container" style="font-family: 'Roboto', sans-serif;">
 			<div class="row">
 				<div class="col-md-12">
-					<form>
+					<form class="mt-2">
 						<label for="inputSessionNameEdit">Name</label> <span id="titleErrorMessage" style="color: red"></span>
 						<input type="text" id="inputSessionNameEdit" class="form-control shadow-sm mb-2" placeholder="Name" required disabled="disabled">
 						<label for="inputSummaryEdit">Summary</label> <span id="summaryErrorMessage" style="color: red"></span>
