--- a/ElectronsFlaskTest/html/projects.html
+++ b/ElectronsFlaskTest/html/projects.html
@@ -10,8 +10,11 @@
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
 	<body>
-
-
+		<ul>
+			<li>Participants</li>
+			<li>Triggering Questions</li>
+			<li>.....</li>
+		</ul>
 		<div class="container">
 			<h1 id="welcome"></h1>
 			<h2>My projects</h2>
@@ -21,7 +24,8 @@
 
 		<div class="container">
 			<form class="form-signin">
-				<h1 id="h3 mb-3 font-weight-normal">Create Project</h1>
+				<h1 id="project_name">Project Name</h1>
+				<h2 id="h3 mb-3 font-weight-normal">Create Project</h2>
 				<label for="userProjects" class="sr-only">Name</label>
 				<input type="text" id="inputProjectName" class="form-control" placeholder="Name" required>
 				<label for="userProjects" class="sr-only">Organization</label>
