Validate inputs when creating project

--- a/ElectronsFlaskTest/html/projects.html
+++ b/ElectronsFlaskTest/html/projects.html
@@ -34,6 +34,8 @@
 						<label for="userProjects" class="sr-only">Context</label>
 						<input type="text" id="inputContext" class="form-control mt-2 shadow-sm" placeholder="Context" required>
 						<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="create_project">Create</button>
+						<ul id="errorMessageP" class="mt-2 text-left">
+						</ul>
 					</form>
 				</div>
 			</div>
