Check for empty fields when creating a session

--- a/ElectronsFlaskTest/html/session.html
+++ b/ElectronsFlaskTest/html/session.html
@@ -31,6 +31,8 @@
 						<label for="projectSessions" class="sr-only">Summary</label>
 						<input type="text" id="inputSummary" class="form-control mt-2 shadow-sm" placeholder="Summary" required>
 						<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="create_session">Create</button>
+						<ul id="errorMessage" class="mt-2 text-left">
+						</ul>
 					</form>
 				</div>
 			</div>
