Added field for Triggering Question as part of a session

--- a/ElectronsFlaskTest/html/session.html
+++ b/ElectronsFlaskTest/html/session.html
@@ -30,6 +30,8 @@
 						<input type="text" id="inputSessionName" class="form-control mt-2 shadow-sm" placeholder="Name" required>
 						<label for="projectSessions" class="sr-only">Summary</label>
 						<input type="text" id="inputSummary" class="form-control mt-2 shadow-sm" placeholder="Summary" required>
+						<label for="projectSessions" class="sr-only">Triggering Question</label>
+						<input type="text" id="inputTriggeringQuestion" class="form-control mt-2 shadow-sm" placeholder="Triggering Question" required>
 						<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="create_session">Create</button>
 						<ul id="errorMessage" class="mt-2 text-left">
 						</ul>
