--- a/ElectronsFlaskTest/html/sessionInfo.html
+++ b/ElectronsFlaskTest/html/sessionInfo.html
@@ -23,8 +23,13 @@
 					<form class="mt-2">
 						<label for="inputSessionNameEdit">Name</label> <span id="titleErrorMessage" style="color: red"></span>
 						<input type="text" id="inputSessionNameEdit" class="form-control shadow-sm mb-2" placeholder="Name" required disabled="disabled">
+
 						<label for="inputSummaryEdit">Summary</label> <span id="summaryErrorMessage" style="color: red"></span>
 						<input type="text" id="inputSummaryEdit" class="form-control shadow-sm mb-2" placeholder="Summary" required disabled="disabled">
+
+						<label for="inputTriggeringQuestionEdit">Triggering Question</label> <span id="triggeringQuestionErrorMessage" style="color: red"></span>
+						<input type="text" id="inputTriggeringQuestionEdit" class="form-control shadow-sm mb-2" placeholder="Triggering Question" required disabled="disabled">
+
 						<label for="inputCreationDateEdit">Creation date</label> <span id="dateErrorMessage" style="color: red"></span>
 						<input type="date" id="inputCreationDateEdit" class="form-control shadow-sm mb-3" placeholder="Creation date" required disabled="disabled">
 
