Show triggering question

--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -18,7 +18,7 @@
 			    <a class="nav-link" href="session.html">Back</a>
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Triggering question</a>
+			    <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
 			  </li>
 			  <li class="nav-item">
 			    <a class="nav-link" href="404.html">Element type</a>
