--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -36,7 +36,10 @@
 		</nav>
 		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
 			<div class="row">
-				<div class="col-9" id="ideasSectionVoting"></div>
+				<div class="col-9" id="ideasSectionVoting">
+          <h3>Session Ideas</h3>
+          
+        </div>
 				<div class="col-3">
           <form class="form-signin">
             <h3>Select Participant: </h3>
