--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	</head>
 	<body>
-		<div class=" mt-auto container-fluid col-sm-12">
+		<div class="fixed-top container-fluid col-sm-12">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	   			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				  <li class="nav-item active">
@@ -88,7 +88,7 @@
 				      <option>Example</option>
 				      <option>Other</option>
 				    </select>
-				    <input type="text" class="form-control" placeholder="Other" id="otherOption" style='display:none;'>
+				    <input type="text" class="form-control" id="otherOption" style='display:none;'>
 				</div>
 		      </div>
 		      <div class="modal-footer">
