Added voting results

--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="col-9" id="ideasSectionVoting">
           <h3>Session Ideas</h3>
-          
+
         </div>
 				<div class="col-3">
           <form class="form-signin">
@@ -49,6 +49,12 @@
             <button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="save_vote">Save votes</button>
           </form>
 				</div>
+			</div>
+			<div class="row">
+				<div class="col-9" id="ideasSectionResults">
+          <h3>Voting Results</h3>
+          
+        </div>
 			</div>
 		</div>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
