--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
 			      <a class="nav-link" href="sessionVoting.html">Voting</a>
 			    </li>
+			    <li class="nav-item active">
+					<a class="nav-link" href="questions.html">Questions</a>
+			    </li>
 				</ul>
   			</nav>
   		</div>
