--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -25,6 +25,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">Questions</a>
+				</li>
 			</ul>
 		</nav>
 		<div class="container-fluid">
