Normalized nav bar

--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -12,29 +12,25 @@
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
 	<body>
-		<nav class="navbar">
-			<ul class="nav fixed-top nav-tabs">
-			  <li class="nav-item">
-			    <a class="nav-link" href="session.html">Back</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Triggering question</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Element type</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Element generation</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="sessionIdeas.html">Element compression</a>
-			  </li>
-				<li class="nav-item">
-			    <a class="nav-link active" href="sessionVoting.html">Voting</a>
-			  </li>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="session.html">Back</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="sessionVoting.html">Voting</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">Questions</a>
+				</li>
 			</ul>
 		</nav>
-
 		<div id="CaptureVotingScheme" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
 			<div class="row">
         <form class="form-signin">
