--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -14,25 +14,25 @@
 	<body>
 		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
 			<div class=" mt-auto container-fluid col-sm-12">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	   			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				  <li class="nav-item active">
-				    <a class="nav-link" href="session.html">Back</a>
-				  </li>
-				  <li class="nav-item active">
-				    <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-				  </li>
-				  <li class="nav-item active">
-				    <a class="nav-link" href="sessionIdeas.html">Element compression</a>
-				  </li>
-          <li class="nav-item">
-			      <a class="nav-link" href="sessionVoting.html">Voting</a>
-			    </li>
-			    <li class="nav-item active">
-					<a class="nav-link" href="questions.html">Questions</a>
-			    </li>
-				</ul>
-  			</nav>
+				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="session.html">Back</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="sessionIdeas.html">Element compression</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="sessionVoting.html">Voting</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="questions.html">Questions</a>
+						</li>
+					</ul>
+				</nav>
   		</div>
 			<div class="row">
 				<div class="col-9" id="ideasSection"></div>
