--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="session.html">Back</a>
 				</li>
@@ -26,7 +26,10 @@
 					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="estructura_campo.html">Campo</a>
+					<a class="nav-link" href="sessionVoting.html">Voting</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">Questions</a>
 				</li>
 			</ul>
 		</nav>
