--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -11,7 +11,7 @@
 		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body>
+	<body style='padding-top:100px;'>
 		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
 			<div class=" mt-auto container-fluid col-sm-12">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
