--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -11,7 +11,7 @@
 		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body>
+	<body style='padding-top:100px;'>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
