--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -11,27 +11,33 @@
 		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body>
-		<nav class="navbar">
-			<ul class="nav fixed-top nav-tabs">
-			  <li class="nav-item">
-			    <a class="nav-link" href="session.html">Back</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Triggering question</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Element type</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="404.html">Element generation</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="sessionIdeas.html">Element compression</a>
-			  </li>
-				<li class="nav-item">
-			    <a class="nav-link active" href="sessionVoting.html">Voting</a>
-			  </li>
+	<body style="padding-top: 65px">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active">
+					<a class="nav-link" href="session.html">Back</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
+				</li>
+				<li class="nav-item active">
+			      	<a class="nav-link" href="sessionVoting.html">Voting</a>
+				  </li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">General</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="estructura_campo.html">Campo</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="categories.html">Categories</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
+				</li>
 			</ul>
 		</nav>
 
