--- a/ElectronsFlaskTest/html/categories.html
+++ b/ElectronsFlaskTest/html/categories.html
@@ -14,27 +14,33 @@
 			<div class="row">
 				<div class="col-md-12">
 					<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-						<ul class="navbar-nav">
-							<li class="nav-item active">
-								<a class="nav-link" href="session.html">Back</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="sessionIdeas.html">Element compression</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="sessionVoting.html">Voting</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="estructura_campo.html">Campo</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="categories.html">Categories</a>
-							</li>
-						</ul>
-					</nav>
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active">
+					<a class="nav-link" href="session.html">Back</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
+				</li>
+				<li class="nav-item active">
+			      	<a class="nav-link" href="sessionVoting.html">Voting</a>
+				  </li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">General</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="estructura_campo.html">Campo</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="categories.html">Categories</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
+				</li>
+			</ul>
+		</nav>
 				</div>
 			</div>
 			<div class="row">
