--- a/ElectronsFlaskTest/html/questions.html
+++ b/ElectronsFlaskTest/html/questions.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<ul class="navbar-nav">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
 					<a class="nav-link" href="session.html">Back</a>
 				</li>
@@ -24,10 +24,19 @@
 					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="sessionVoting.html">Voting</a>
+			      	<a class="nav-link" href="sessionVoting.html">Voting</a>
+				  </li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">General</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="questions.html">Questions</a>
+					<a class="nav-link" href="estructura_campo.html">Campo</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="categories.html">Categories</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
 				</li>
 			</ul>
 		</nav>
