--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -9,31 +9,44 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link href="../styles/projects.css" rel="stylesheet">
-		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body>
+	<body style="padding-top: 65px">
 		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
 			<div class=" mt-auto container-fluid col-sm-12">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	   			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				  <li class="nav-item active">
-				    <a class="nav-link" href="session.html">Back</a>
-				  </li>
-				  <li class="nav-item active">
-				    <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-				  </li>
-				  <li class="nav-item active">
-				    <a class="nav-link" href="sessionIdeas.html">Element compression</a>
-				  </li>
-          <li class="nav-item">
-			      <a class="nav-link" href="sessionVoting.html">Voting</a>
-			    </li>
-			    <li class="nav-item active">
-					<a class="nav-link" href="questions.html">Questions</a>
-			    </li>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="session.html">Back</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="sessionIdeas.html">Element compression</a>
+					</li>
+					<li class="nav-item active">
+				      	<a class="nav-link" href="sessionVoting.html">Voting</a>
+					  </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="questions.html">General</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="estructura_campo.html">Campo</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="categories.html">Categories</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
+					</li>
 				</ul>
-  			</nav>
+			</nav>
   		</div>
+  			<div class="row">
+  				<div class="col-12">
+  					<h2>Element compression</h2>
+  				</div>
+  			</div>
 			<div class="row">
 				<div class="col-9" id="ideasSection"></div>
 				<div class="col-3">
