--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -8,12 +8,10 @@
 		<title>MEI</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link href="../styles/projects.css" rel="stylesheet">
-		<link href="../styles/login.css" rel="stylesheet">
 		<link href="../styles/sessionIdea.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	</head>
-	<body>
+	<body style="padding-top: 65px">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
@@ -26,7 +24,19 @@
 					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
 				</li>
 				<li class="nav-item active">
+			      	<a class="nav-link" href="sessionVoting.html">Voting</a>
+				  </li>
+				<li class="nav-item active">
+					<a class="nav-link" href="questions.html">General</a>
+				</li>
+				<li class="nav-item active">
 					<a class="nav-link" href="estructura_campo.html">Campo</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="categories.html">Categories</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
 				</li>
 			</ul>
 		</nav>
