--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -53,11 +53,13 @@
 
 		<div id="CaptureVotes" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
 			<div class="row">
+				<div>
+					<div class="col-2" id="ideasSectionResults">
+          	<h3>Voting Results</h3>
 
-				<div class="col-2" id="ideasSectionResults">
-          <h3>Voting Results</h3>
-
-        </div>
+        	</div>
+					<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="continue_structuring">Continue</button>
+				</div>
 
 				<div class="col-6" id="ideasSectionVoting">
           <h3>Session Ideas</h3>
