--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -43,13 +43,13 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col">
-					<div id="projectSessions" style="height: 40%">
+					<div id="projectSessions" style="height: 40%;">
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col" style="overflow-y: auto;">
-					<table class="table table-striped" style="display: block; height: 60vh">
+					<table class="table table-striped" style="display: table; height: 60vh;">
 						<thead>
 							<tr class="bg-primary text-white">
 								<th scope="col">#</th>
@@ -57,6 +57,7 @@
 								<th scope="col">Statement</th>
 								<th scope="col">Clarification</th>
 								<th scope="col">Author</th>
+								<th scope="col">Edit</th>
 							</tr>
 						</thead>
 						<tbody id="ideaSessions">
