--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -31,6 +31,9 @@
 			    <li class="nav-item active">
 					<a class="nav-link" href="questions.html">Questions</a>
 			    </li>
+			    <li class="nav-item active">
+				    <a class="nav-link" href="idea_visualization.html">Idea Visualization</a>
+				  </li>
 				</ul>
   			</nav>
   		</div>
