--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -28,6 +28,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="estructura_campo.html">Campo</a>
 				</li>
+				<li class="nav-item active">
+				    <a class="nav-link" href="questions.html">Question</a>
+				  </li>
 			</ul>
 		</nav>
 		<div class="container-fluid">
