--- a/ElectronsFlaskTest/html/idea_visualization.html
+++ b/ElectronsFlaskTest/html/idea_visualization.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <title>Organization Chart Plugin</title>
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+	<script type="text/javascript" src="../js/dracula/raphael-min.js"></script>
+  <script type="text/javascript" src="../js/dracula/dracula_graffle.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <link rel="stylesheet" href="../styles/jquery.orgchart.css">
-  <script src="../js/jquery.orgchart.js"></script>
-  <script src="../js/idea_visualization.js"></script>
-</head>
-<body>
-  <div id="chart-container"></div>
-</body>
+  <script type="text/javascript" src="../js/dracula/dracula_graph.js"></script>
+  <script type="text/javascript" src="../js/idea_visualization.js">
+  </script>
+ </head>
+ <body>
+  <div id="canvas" style="align-content: center;"></div>
+ </body>
 </html>
