--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -11,7 +11,7 @@
 		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body style="padding-top: 65px">
+	<body style="padding-top: 100px">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
@@ -63,11 +63,11 @@
 		<div id="CaptureVotes" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
 			<div class="row">
 				<div>
-					<div class="col-2" id="ideasSectionResults">
-          	<h3>Voting Results</h3>
+					<div class="col-4" id="ideasSectionResults">
+          	<h3>Ideas to Structure</h3>
 
         	</div>
-					<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="continue_structuring">Continue</button>
+					<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="continue_structuring">Save Ideas</button>
 				</div>
 
 				<div class="col-6" id="ideasSectionVoting">
@@ -83,6 +83,11 @@
             </select>
             <button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="save_vote">Save votes</button>
           </form>
+				</div>
+				<div id="ResetVoting" class="container" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; display: none">
+					<div class="row">
+		      	<button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="reset_votes">Reset Voting</button>
+					</div>
 				</div>
 			</div>
 		</div>
