--- a/ElectronsFlaskTest/html/categories.html
+++ b/ElectronsFlaskTest/html/categories.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Categories</h2>
+					<h2 id="title">Categories</h2>
 				</div>
 			</div>
 			<div class="row">
