--- a/ElectronsFlaskTest/html/priority_visualization.html
+++ b/ElectronsFlaskTest/html/priority_visualization.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="../js/dracula/dracula_graffle.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="../js/dracula/dracula_graph.js"></script>
-  <script type="text/javascript" src="../js/idea_visualization.js"></script>
+  <script type="text/javascript" src="../js/priority_visualization.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
  </head>
@@ -42,8 +42,12 @@
       </ul>
     </nav>
     <div class="container-fluid" style="font-family: 'Roboto';">
-      <div id="canvas" style="align-content: center;"></div>
-      <div id="warning" style="display: none;"><h1>¡No se ha realizado la estructuración general!</h1></div>
+      <div class="row">
+        <div class="col-12">
+          <div id="canvas"></div>
+          <div id="warning" style="display: none;"><h1>¡No se ha realizado la estructuración por prioridades!</h1></div>
+        </div>
+      </div>
     </div>
  </body>
 </html>
