--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -38,6 +38,12 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="idea_visualization.html">Visualización</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="priority_visualization.html">Visualización de prioridades</a>
+				</li>
 			</ul>
 		</nav>
 		<div class="container-fluid">
