--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -7,37 +7,38 @@
 		<meta name="author" content="">
 		<title>MEI</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link href="../styles/projects.css" rel="stylesheet">
 		<link href="../styles/login.css" rel="stylesheet">
 	</head>
 	<body style="padding-top: 100px">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			<ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item active">
-					<a class="nav-link" href="session.html">Back</a>
+				<li><a class="nav-link" href="session.html">Back</a></li>
+				<li class="dropdown nav-link"><a class="dropdown-toggle" data-toggle="dropdown">Idea Generation<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a class="nav-link" href="triggeringQuestion.html">Triggering question</a></li>
+						<li><a class="nav-link" href="sessionIdeas.html">Element compression</a></li>
+					</ul>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
-				</li>
-				<li class="nav-item active">
-			    <a class="nav-link" href="sessionVoting.html">Voting</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="questions.html">General</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="estructura_campo.html">Campo</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="categories.html">Categories</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
-				</li>
+				<li class="nav-item active"><a class="nav-link" href="sessionVoting.html">Voting</a></li>
+				<li><a class="nav-link" href="questions.html">General</a></li>
+				<li><a class="nav-link" href="estructura_campo.html">Campo</a></li>
+				<li><a class="nav-link" href="categories.html">Categories</a></li>
+				<li><a class="nav-link" href="prioridades_preguntas.html">Prioridades</a></li>
 			</ul>
 		</nav>
 		<div id="CaptureVotingScheme" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
