--- a/ElectronsFlaskTest/html/prioridades_preguntas.html
+++ b/ElectronsFlaskTest/html/prioridades_preguntas.html
@@ -100,11 +100,13 @@
 					<h1></h1>
 				</div>
 			</div>
+			<button id='print-pdf'>Print</button>
 		</div>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 		<script src="../js/jquery.js"></script>
 		<script src="../js/prioridades.js"></script>
+		<script src="../js/printing.js"></script>
 		<script>if (window.module) module = window.module;</script>
 	</body>
 </html>
