--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -58,8 +58,9 @@
           <button class="btn btn-lg btn-primary btn-block mt-2" type="submit" id="save_voting_details">Continue</button>
         </form>
 			</div>
-		</div>
 
+		</div>
+		<button id='print-pdf'>Print</button>	
 		<div id="CaptureVotes" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
 			<div class="row">
 				<div>
@@ -72,7 +73,7 @@
 
 				<div class="col-6" id="ideasSectionVoting">
           <h3>Session Ideas</h3>
-
+		  
         </div>
 
 				<div class="col-3">
